--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ default = []
 force-inprocess = []
 async = ["dep:futures-core", "dep:futures-channel"]
 win32-trace = []
+tracing = ["dep:tracing"]
 
 [dependencies]
 bincode = "1"
@@ -38,6 +39,7 @@ futures-core = { version = "0.3.31", optional = true }
 libc = "0.2.162"
 serde = { version = "1.0", features = ["rc"] }
 uuid = { version = "1", features = ["v4"] }
+tracing = { version = "0.1", optional = true}
 
 [target.'cfg(any(target_os = "linux", target_os = "openbsd", target_os = "freebsd", target_os = "illumos"))'.dependencies]
 mio = { version = "1.0", default-features = false, features = ["os-ext"] }
